[package]
name = "illuvium-land"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "illuvium-land-runner"
path = "src/main.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.23"
teloxide = { version = "0.12.0", features = ["macros"] }
resvg = "0.28.0"